--- a/Platform/Platform.csproj
+++ b/Platform/Platform.csproj
@@ -145,7 +145,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="PostBuildEvent">
-    <Exec Command="xcopy &quot;$(SolutionDir)Binary\$(ConfigurationName)\Core\AnyCPU&quot; &quot;$(SolutionDir)Binary\$(ConfigurationName)\Platform\$(PlatformName)&quot; /y" />
-    <Exec Command="xcopy &quot;$(SolutionDir)Binary\$(ConfigurationName)\Theme\AnyCPU&quot; &quot;$(SolutionDir)Binary\$(ConfigurationName)\Platform\$(PlatformName)&quot; /y" />
+    <Exec Command="xcopy &quot;$(SolutionDir)Binary\$(ConfigurationName)\Core\AnyCPU&quot; &quot;$(SolutionDir)Binary\$(ConfigurationName)\Platform\$(PlatformName)&quot; /e /y" />
+    <Exec Command="xcopy &quot;$(SolutionDir)Binary\$(ConfigurationName)\Theme\AnyCPU&quot; &quot;$(SolutionDir)Binary\$(ConfigurationName)\Platform\$(PlatformName)&quot; /e /y" />
   </Target>
 </Project>
