- Added Parameters class - Fixed bug 599 (partially; found in: Alpha; will be fixed in: CTP 1) - Refactoring

--- a/Theme/Theme.csproj
+++ b/Theme/Theme.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Controls\ProgressBar.cs" />
     <Compile Include="Controls\Window.cs" />
     <Compile Include="Converters\ThicknessToDoubleConverter.cs" />
+    <Compile Include="Parameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
