--- a/Source code/Core/Core.csproj
+++ b/Source code/Core/Core.csproj
@@ -7,7 +7,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Elysium.Core</RootNamespace>
-    <AssemblyName>Core</AssemblyName>
+    <AssemblyName>Elysium.Core</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile3</TargetFrameworkProfile>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -40,11 +40,14 @@
   <ItemGroup>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Composer.cs" />
     <Compile Include="Groups\IGroup.cs" />
     <Compile Include="Groups\IPage.cs" />
+    <Compile Include="Parameters.cs" />
     <Compile Include="Plugins\IApplication.cs" />
     <Compile Include="Plugins\IEmbeddedApplication.cs" />
     <Compile Include="Plugins\IGadget.cs" />
