--- a/Source code/Platform/app.config
+++ b/Source code/Platform/app.config
@@ -13,6 +13,12 @@
             <setting name="IsDarkTheme" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="CompositionAssemblies" serializeAs="Xml">
+                <value>
+                    <ArrayOfAnyType xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+                </value>
+            </setting>
         </Elysium.Platform.Properties.Settings>
     </userSettings>
 </configuration>
