- Added base classes for MVVM pattern. - Created basic security infrastructure. - Recreated infrastructure for plug-in system. For communication is now being used WCF. - Upgrade program version.

--- a/Source code/Platform/App.config
+++ b/Source code/Platform/App.config
@@ -8,17 +8,21 @@
     <userSettings>
         <Elysium.Platform.Properties.Settings>
             <setting name="AccentColor" serializeAs="String">
-                <value>4280000994</value>
+                <value>#FF1BA1E2</value>
             </setting>
-            <setting name="IsDarkTheme" serializeAs="String">
-                <value>True</value>
+            <setting name="Theme" serializeAs="String">
+                <value>Dark</value>
             </setting>
-            <setting name="CompositionAssemblies" serializeAs="Xml">
-                <value>
-                    <ArrayOfAnyType xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
-                </value>
-            </setting>
+          <setting name="Gadgets" serializeAs="Xml">
+            <value>
+              <ObservableDictionaryOfGuidGadget xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+            </value>
+          </setting>
+          <setting name="Applications" serializeAs="Xml">
+            <value>
+              <ObservableDictionaryOfGuidApplication xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+            </value>
+          </setting>
         </Elysium.Platform.Properties.Settings>
     </userSettings>
 </configuration>
