--- a/Source code/Platform/Properties/Settings.settings
+++ b/Source code/Platform/Properties/Settings.settings
@@ -2,15 +2,19 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Elysium.Platform.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="AccentColor" Type="System.UInt32" Scope="User">
-      <Value Profile="(Default)">4280000994</Value>
+    <Setting Name="AccentColor" Type="System.Windows.Media.Color" Scope="User">
+      <Value Profile="(Default)">#FF1BA1E2</Value>
     </Setting>
-    <Setting Name="IsDarkTheme" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+    <Setting Name="Theme" Type="Elysium.Theme.WPF.Theme" Scope="User">
+      <Value Profile="(Default)">Dark</Value>
     </Setting>
-    <Setting Name="CompositionAssemblies" Type="System.Collections.ArrayList" Scope="User">
+    <Setting Name="Gadgets" Type="Elysium.Platform.Collections.ObservableDictionary`2[System.Guid,Elysium.Platform.Entities.Gadget]" Scope="User">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfAnyType xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" /&gt;</Value>
+&lt;ObservableDictionaryOfGuidGadget xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" /&gt;</Value>
+    </Setting>
+    <Setting Name="Applications" Type="Elysium.Platform.Collections.ObservableDictionary`2[System.Guid,Elysium.Platform.Entities.Application]" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ObservableDictionaryOfGuidApplication xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" /&gt;</Value>
     </Setting>
   </Settings>
 </SettingsFile>
